Tue Jan 31 20:59:19 1995  Ken Raeburn  <raeburn@cujo.cygnus.com>

	* server.c: Try to avoid starting the "rm -rf" at cleanup time
	until after subprocesses have finished.
	(command_fds_to_drain, max_command_fd): New variables.
	(do_cvs_command): Set them.
	(command_pid_is_dead): New variable.
	(wait_sig): New function.
	(server_cleanup): If command_pid is nonzero, wait for it to die,
	draining output from it in the meantime.  If nonzero SIG was
	passed, send a signal to the subprocess, to encourage it to die
	soon.

	* main.c (usage): Argument is now `const char *const *'.
	* cvs.h (usage): Changed prototype.
	(USE): Make new variable `const'.
	* add.c (add_usage), admin.c (admin_usage), checkout.c
	(checkout_usage, export_usage, checkout), commit.c (commit_usage),
	diff.c (diff_usage), history.c (history_usg), import.c
	(import_usage, keyword_usage), log.c (log_usage), main.c (usg),
	patch.c (patch_usage), release.c (release_usage), remove.c
	(remove_usage), rtag.c (rtag_usage), server.c (server), status.c
	(status_usage), tag.c (tag_usage), update.c (update_usage): Usage
	messages are now const arrays of pointers to const char.

	* import.c (comtable): Now const.
	* main.c (rcsid): Now static.
	(cmd): Now const.
	(main): Local variable CM now points to const.
	* server.c (outbuf_memory_error): Local var MSG now const.

	* client.c (client_commit_usage): Deleted.

Sat Dec 31 15:51:55 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* logmsg.c (do_editor): Allocate enough space for trailing '\0'.

Fri Mar  3 11:59:49 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

	* cvsbug.sh: Call it "Cyclic CVS" now, not "Remote CVS".  Call it
	version C1.4A, not 1.4A2-remote.  Send bugs to cyclic-cvs, not
	remote-cvs.

	* classify.c (Classify_File): Put check for dead file inside
	"#ifdef DEATH_SUPPORT".

Thu Feb 23 23:03:43 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

	* update.c (join_file): Don't pass the -E option to rcsmerge here,
	either (see Jan 22 change).
