@@ -121,7 +121,6 @@ mkdir_p (dir)
     char *p;
     char *q = malloc (strlen (dir) + 1);
     int retval;
-    struct stat dummy;
 
     if (q == NULL)
 	return ENOMEM;
@@ -139,13 +138,14 @@ mkdir_p (dir)
 	{
 	    strncpy (q, dir, p - dir);
 	    q[p - dir] = '\0';
-
-	    /* If the directory doesn't exist, try to create it.  */
-	    if (stat (q, &dummy) < 0
-		&& mkdir (q, 0777) < 0)
+	    if (mkdir (q, 0777) < 0)
 	    {
-	        retval = errno;
-		goto done;
+		if (errno != EEXIST
+		    && (errno != EACCES || !isdir(q)))
+		{
+		    retval = errno;
+		    goto done;
+		}
 	    }
 	    ++p;
 	}
