@@ -1,3 +1,8 @@
+Wed Mar 22 21:55:56 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)
+
+	* server.c (mkdir_p): Call stat only if we get the EACCES.  Faster
+	and more elegant.
+
 Tue Jan 31 20:59:19 1995  Ken Raeburn  <raeburn@cujo.cygnus.com>
 
 	* server.c: Try to avoid starting the "rm -rf" at cleanup time
